hphp/test/slow/container-ref-init/set-init.php.expectf

Fatal error: Collection element cannot be marked as reference in %s/set-init.php on line 7
